feat: add confirmation modals for delete actions in admins, lesson hours, trainers, and plans tabs